[WWW-168] fixes tests